@@ -22,7 +22,7 @@
  */
 
 /*
- * @test
+ * @test id=default
  * @summary Test SuspendAllVirtualThreads/ResumeAllVirtualThreads
  * @library /test/lib
  * @compile --enable-preview -source ${jdk.version} SuspendResume2.java
@@ -31,6 +31,21 @@
  *      --enable-preview
  *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=1
  *      -agentlib:SuspendResume2
+ *      SuspendResume2
+ */
+
+/*
+ * @test id=no-vmcontinuations
+ * @requires vm.continuations
+ * @library /test/lib
+ * @compile --enable-preview -source ${jdk.version} SuspendResume2.java
+ * @run driver jdk.test.lib.FileInstaller . .
+ * @run main/othervm/native
+ *      --enable-preview
+ *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=1
+ *      -agentlib:SuspendResume2
+ *      -XX:+UnlockExperimentalVMOptions
+ *      -XX:-VMContinuations
  *      SuspendResume2
  */
 
