@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,13 +24,14 @@
 /*
  * @test
  * @enablePreview
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
  * @run testng/othervm -Xmx4G -XX:MaxDirectMemorySize=1M --enable-native-access=ALL-UNNAMED TestSegments
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
@@ -39,7 +40,6 @@ import java.lang.invoke.VarHandle;
 import java.nio.ByteBuffer;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Function;
 import java.util.function.IntFunction;
 import java.util.function.Supplier;
 
@@ -50,43 +50,44 @@ public class TestSegments {
 
     @Test(dataProvider = "badSizeAndAlignments", expectedExceptions = IllegalArgumentException.class)
     public void testBadAllocateAlign(long size, long align) {
-        MemorySegment.allocateNative(size, align, MemorySession.openImplicit());
+        MemorySegment.allocateNative(size, align, SegmentScope.auto());
     }
 
     @Test
     public void testZeroLengthNativeSegment() {
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
+            SegmentScope session = arena.scope();
             var segment = MemorySegment.allocateNative(0, session);
             assertEquals(segment.byteSize(), 0);
             MemoryLayout seq = MemoryLayout.sequenceLayout(0, JAVA_INT);
             segment = MemorySegment.allocateNative(seq, session);
             assertEquals(segment.byteSize(), 0);
-            assertEquals(segment.address().toRawLongValue() % seq.byteAlignment(), 0);
+            assertEquals(segment.address() % seq.byteAlignment(), 0);
             segment = MemorySegment.allocateNative(0, 4, session);
             assertEquals(segment.byteSize(), 0);
-            assertEquals(segment.address().toRawLongValue() % 4, 0);
-            segment = MemorySegment.ofAddress(segment.address(), 0, session);
-            assertEquals(segment.byteSize(), 0);
-            assertEquals(segment.address().toRawLongValue() % 4, 0);
+            assertEquals(segment.address() % 4, 0);
+            MemorySegment rawAddress = MemorySegment.ofAddress(segment.address(), 0, session);
+            assertEquals(rawAddress.byteSize(), 0);
+            assertEquals(rawAddress.address() % 4, 0);
         }
     }
 
     @Test(expectedExceptions = { OutOfMemoryError.class,
                                  IllegalArgumentException.class })
     public void testAllocateTooBig() {
-        MemorySegment.allocateNative(Long.MAX_VALUE, MemorySession.openImplicit());
+        MemorySegment.allocateNative(Long.MAX_VALUE, SegmentScope.auto());
     }
 
     @Test(expectedExceptions = OutOfMemoryError.class)
     public void testNativeAllocationTooBig() {
-        MemorySegment segment = MemorySegment.allocateNative(1024 * 1024 * 8 * 2, MemorySession.openImplicit()); // 2M
+        MemorySegment segment = MemorySegment.allocateNative(1024L * 1024 * 8 * 2, SegmentScope.auto()); // 2M
     }
 
     @Test
     public void testNativeSegmentIsZeroed() {
         VarHandle byteHandle = ValueLayout.JAVA_BYTE.arrayElementVarHandle();
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(1000, 1, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(1000, 1, arena.scope());
             for (long i = 0 ; i < segment.byteSize() ; i++) {
                 assertEquals(0, (byte)byteHandle.get(segment, i));
             }
@@ -96,8 +97,8 @@ public class TestSegments {
     @Test
     public void testSlices() {
         VarHandle byteHandle = ValueLayout.JAVA_BYTE.arrayElementVarHandle();
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(10, 1, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(10, 1, arena.scope());
             //init
             for (byte i = 0 ; i < segment.byteSize() ; i++) {
                 byteHandle.set(segment, (long)i, i);
@@ -116,15 +117,14 @@ public class TestSegments {
 
     @Test
     public void testEqualsOffHeap() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(100, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(100, arena.scope());
             assertEquals(segment, segment.asReadOnly());
             assertEquals(segment, segment.asSlice(0, 100));
             assertNotEquals(segment, segment.asSlice(10, 90));
-            assertNotEquals(segment, segment.asSlice(0, 90));
-            assertEquals(segment, MemorySegment.ofAddress(segment.address(), 100, session.asNonCloseable()));
-            assertNotEquals(segment, MemorySegment.ofAddress(segment.address(), 100, MemorySession.global()));
-            MemorySegment segment2 = MemorySegment.allocateNative(100, session);
+            assertEquals(segment, segment.asSlice(0, 90));
+            assertEquals(segment, MemorySegment.ofAddress(segment.address(), 100, SegmentScope.global()));
+            MemorySegment segment2 = MemorySegment.allocateNative(100, arena.scope());
             assertNotEquals(segment, segment2);
         }
     }
@@ -135,36 +135,79 @@ public class TestSegments {
         assertEquals(segment, segment.asReadOnly());
         assertEquals(segment, segment.asSlice(0, 100));
         assertNotEquals(segment, segment.asSlice(10, 90));
-        assertNotEquals(segment, segment.asSlice(0, 90));
+        assertEquals(segment, segment.asSlice(0, 90));
         MemorySegment segment2 = MemorySegment.ofArray(new byte[100]);
         assertNotEquals(segment, segment2);
     }
 
+    @Test
+    public void testHashCodeOffHeap() {
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(100, arena.scope());
+            assertEquals(segment.hashCode(), segment.asReadOnly().hashCode());
+            assertEquals(segment.hashCode(), segment.asSlice(0, 100).hashCode());
+            assertEquals(segment.hashCode(), segment.asSlice(0, 90).hashCode());
+            assertEquals(segment.hashCode(), MemorySegment.ofAddress(segment.address(), 100, SegmentScope.global()).hashCode());
+        }
+    }
+
+    @Test
+    public void testHashCodeOnHeap() {
+        MemorySegment segment = MemorySegment.ofArray(new byte[100]);
+        assertEquals(segment.hashCode(), segment.asReadOnly().hashCode());
+        assertEquals(segment.hashCode(), segment.asSlice(0, 100).hashCode());
+        assertEquals(segment.hashCode(), segment.asSlice(0, 90).hashCode());
+    }
+
     @Test(expectedExceptions = IndexOutOfBoundsException.class)
     public void testSmallSegmentMax() {
-        long offset = (long)Integer.MAX_VALUE + (long)Integer.MAX_VALUE + 2L + 6L; // overflows to 6 when casted to int
-        MemorySegment memorySegment = MemorySegment.allocateNative(10, MemorySession.openImplicit());
+        long offset = (long)Integer.MAX_VALUE + (long)Integer.MAX_VALUE + 2L + 6L; // overflows to 6 when cast to int
+        MemorySegment memorySegment = MemorySegment.allocateNative(10, SegmentScope.auto());
         memorySegment.get(JAVA_INT, offset);
     }
 
     @Test(expectedExceptions = IndexOutOfBoundsException.class)
     public void testSmallSegmentMin() {
-        long offset = ((long)Integer.MIN_VALUE * 2L) + 6L; // underflows to 6 when casted to int
-        MemorySegment memorySegment = MemorySegment.allocateNative(10, MemorySession.openImplicit());
+        long offset = ((long)Integer.MIN_VALUE * 2L) + 6L; // underflows to 6 when cast to int
+        MemorySegment memorySegment = MemorySegment.allocateNative(10L, SegmentScope.auto());
         memorySegment.get(JAVA_INT, offset);
+    }
+
+    @Test
+    public void testSegmentOOBMessage() {
+        try {
+            var segment = MemorySegment.allocateNative(10, SegmentScope.global());
+            segment.getAtIndex(ValueLayout.JAVA_INT, 2);
+        } catch (IndexOutOfBoundsException ex) {
+            assertTrue(ex.getMessage().contains("Out of bound access"));
+            assertTrue(ex.getMessage().contains("offset = 8"));
+            assertTrue(ex.getMessage().contains("length = 4"));
+        }
     }
 
     @Test(dataProvider = "segmentFactories")
     public void testAccessModesOfFactories(Supplier<MemorySegment> segmentSupplier) {
         MemorySegment segment = segmentSupplier.get();
         assertFalse(segment.isReadOnly());
-        tryClose(segment);
     }
 
-    static void tryClose(MemorySegment segment) {
-        if (segment.session().isCloseable()) {
-            segment.session().close();
-        }
+    @DataProvider(name = "scopes")
+    public Object[][] scopes() {
+        return new Object[][] {
+                { SegmentScope.auto(), false },
+                { SegmentScope.global(), false },
+                { Arena.openConfined().scope(), true },
+                { Arena.openShared().scope(), false }
+        };
+    }
+
+    @Test(dataProvider = "scopes")
+    public void testIsAccessibleBy(SegmentScope scope, boolean isConfined) {
+        assertTrue(scope.isAccessibleBy(Thread.currentThread()));
+        assertTrue(scope.isAccessibleBy(new Thread()) != isConfined);
+        MemorySegment segment = MemorySegment.ofAddress(0, 0, scope);
+        assertTrue(segment.scope().isAccessibleBy(Thread.currentThread()));
+        assertTrue(segment.scope().isAccessibleBy(new Thread()) != isConfined);
     }
 
     @DataProvider(name = "segmentFactories")
@@ -177,43 +220,15 @@ public class TestSegments {
                 () -> MemorySegment.ofArray(new int[] { 1, 2, 3, 4 }),
                 () -> MemorySegment.ofArray(new long[] { 1l, 2l, 3l, 4l } ),
                 () -> MemorySegment.ofArray(new short[] { 1, 2, 3, 4 } ),
-                () -> MemorySegment.allocateNative(4, MemorySession.openImplicit()),
-                () -> MemorySegment.allocateNative(4, 8, MemorySession.openImplicit()),
-                () -> MemorySegment.allocateNative(JAVA_INT, MemorySession.openImplicit()),
-                () -> MemorySegment.allocateNative(4, MemorySession.openImplicit()),
-                () -> MemorySegment.allocateNative(4, 8, MemorySession.openImplicit()),
-                () -> MemorySegment.allocateNative(JAVA_INT, MemorySession.openImplicit())
+                () -> MemorySegment.allocateNative(4L, SegmentScope.auto()),
+                () -> MemorySegment.allocateNative(4L, 8, SegmentScope.auto()),
+                () -> MemorySegment.allocateNative(JAVA_INT, SegmentScope.auto()),
+                () -> MemorySegment.allocateNative(4L, SegmentScope.auto()),
+                () -> MemorySegment.allocateNative(4L, 8, SegmentScope.auto()),
+                () -> MemorySegment.allocateNative(JAVA_INT, SegmentScope.auto())
 
         );
         return l.stream().map(s -> new Object[] { s }).toArray(Object[][]::new);
-    }
-
-    static class SegmentFactory {
-        final MemorySession session;
-        final Function<MemorySession, MemorySegment> segmentFunc;
-
-        SegmentFactory(MemorySession session, Function<MemorySession, MemorySegment> segmentFunc) {
-            this.session = session;
-            this.segmentFunc = segmentFunc;
-        }
-
-        public void tryClose() {
-            if (session.isCloseable()) {
-                session.close();
-            }
-        }
-
-        public MemorySegment segment() {
-            return segmentFunc.apply(session);
-        }
-
-        static SegmentFactory ofArray(Supplier<MemorySegment> segmentSupplier) {
-            return new SegmentFactory(MemorySession.global(), (_ignored) -> segmentSupplier.get());
-        }
-
-        static SegmentFactory ofImplicitSession(Function<MemorySession, MemorySegment> segmentFunc) {
-            return new SegmentFactory(MemorySession.openImplicit(), segmentFunc);
-        }
     }
 
     @Test(dataProvider = "segmentFactories")
@@ -238,41 +253,19 @@ public class TestSegments {
                 assertEquals((byte) byteHandle.get(segment, l), (byte) ~value);
             }
             assertEquals((byte) byteHandle.get(segment, segment.byteSize() - 1L), value);
-            tryClose(segment);
-        }
-    }
-
-    @Test(dataProvider = "segmentFactories")
-    public void testFillClosed(Supplier<MemorySegment> segmentSupplier) {
-        MemorySegment segment = segmentSupplier.get();
-        tryClose(segment);
-        if (!segment.session().isAlive()) {
-            try {
-                segment.fill((byte) 0xFF);
-                fail();
-            } catch (IllegalStateException ex) {
-                assertTrue(true);
-            }
         }
     }
 
     @Test(dataProvider = "segmentFactories")
     public void testNativeSegments(Supplier<MemorySegment> segmentSupplier) {
         MemorySegment segment = segmentSupplier.get();
-        try {
-            segment.address();
-            assertTrue(segment.isNative());
-        } catch (UnsupportedOperationException exception) {
-            assertFalse(segment.isNative());
-        }
-        tryClose(segment);
+        assertEquals(segment.isNative(), !segment.array().isPresent());
     }
 
     @Test(dataProvider = "segmentFactories", expectedExceptions = UnsupportedOperationException.class)
     public void testFillIllegalAccessMode(Supplier<MemorySegment> segmentSupplier) {
         MemorySegment segment = segmentSupplier.get();
         segment.asReadOnly().fill((byte) 0xFF);
-        tryClose(segment);
     }
 
     @Test(dataProvider = "segmentFactories")
@@ -290,15 +283,12 @@ public class TestSegments {
         thread.start();
         thread.join();
 
-        if (segment.session().ownerThread() != null) {
+        if (!segment.scope().isAccessibleBy(Thread.currentThread())) {
             RuntimeException e = exception.get();
-            if (!(e instanceof IllegalStateException)) {
-                throw e;
-            }
+            throw e;
         } else {
             assertNull(exception.get());
         }
-        tryClose(segment);
     }
 
     @Test
@@ -309,22 +299,11 @@ public class TestSegments {
     }
 
     @Test(dataProvider = "heapFactories")
-    public void testBigHeapSegments(IntFunction<MemorySegment> heapSegmentFactory, int factor) {
-        int bigSize = (Integer.MAX_VALUE / factor) + 1;
-        MemorySegment segment = heapSegmentFactory.apply(bigSize);
-        assertTrue(segment.byteSize() > 0);
-    }
-
-    @Test
-    public void testSegmentAccessorWithWrappedLifetime() {
-        MemorySession session = MemorySession.openConfined();
-        MemorySession publicSession = session.asNonCloseable();
-        assertEquals(session, publicSession);
-        MemorySegment segment = publicSession.allocate(100);
-        assertThrows(UnsupportedOperationException.class, publicSession::close);
-        assertThrows(UnsupportedOperationException.class, segment.session()::close);
-        session.close();
-        assertFalse(publicSession.isAlive());
+    public void testVirtualizedBaseAddress(IntFunction<MemorySegment> heapSegmentFactory, int factor) {
+        MemorySegment segment = heapSegmentFactory.apply(10);
+        assertEquals(segment.address(), 0); // base address should be zero (no leaking of impl details)
+        MemorySegment end = segment.asSlice(segment.byteSize(), 0);
+        assertEquals(end.address(), segment.byteSize()); // end address should be equal to segment byte size
     }
 
     @DataProvider(name = "badSizeAndAlignments")
@@ -339,6 +318,7 @@ public class TestSegments {
     @DataProvider(name = "heapFactories")
     public Object[][] heapFactories() {
         return new Object[][] {
+                { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new byte[size]), 1 },
                 { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new char[size]), 2 },
                 { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new short[size]), 2 },
                 { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new int[size]), 4 },
