@@ -24,8 +24,9 @@
 /**
  * @test
  * @summary Test Thread::getStackTrace on a virtual thread that is runnable-unmounted
- * @compile --enable-preview -source ${jdk.version} GetStackTraceWhenRunnable.java
- * @run main/othervm --enable-preview -Djdk.virtualThreadScheduler.maxPoolSize=1 GetStackTraceWhenRunnable
+ * @requires vm.continuations
+ * @enablePreview
+ * @run main/othervm -Djdk.virtualThreadScheduler.maxPoolSize=1 GetStackTraceWhenRunnable
  */
 
 import java.io.IOException;
