@@ -25,10 +25,12 @@
 * @test
 * @summary Tests class unloading on virtual threads
 *
-* @compile --enable-preview -source ${jdk.version} ClassUnloading.java
-* @run main/othervm --enable-preview -XX:-UseCompressedOops ClassUnloading
-* @run main/othervm --enable-preview -XX:+UseCompressedOops ClassUnloading
-* @run main/othervm --enable-preview -Xcomp -XX:-TieredCompilation -XX:CompileOnly=jdk/internal/vm/Continuation,ClassUnloading ClassUnloading
+* @requires vm.continuations
+* @enablePreview
+* @compile ClassUnloading.java
+* @run main/othervm -XX:-UseCompressedOops ClassUnloading
+* @run main/othervm -XX:+UseCompressedOops ClassUnloading
+* @run main/othervm -Xcomp -XX:-TieredCompilation -XX:CompileOnly=jdk/internal/vm/Continuation,ClassUnloading ClassUnloading
 */
 
 // @run testng/othervm -Xcomp -XX:-TieredCompilation -XX:CompileOnly=jdk/internal/vm/Continuation,Basic Basic
