@@ -35,10 +35,11 @@ import jdk.test.lib.jfr.Events;
 /**
  * @test
  * @key jfr
- * @requires vm.hasJFR
+ * @requires vm.hasJFR & vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} TestThreadStartEvent.java LatchedThread.java
- * @run main/othervm --enable-preview jdk.jfr.event.runtime.TestThreadStartEvent
+ * @enablePreview
+ * @compile TestThreadStartEvent.java LatchedThread.java
+ * @run main/othervm jdk.jfr.event.runtime.TestThreadStartEvent
  */
 public class TestThreadStartEvent {
     private final static String EVENT_NAME_THREAD_START = EventNames.ThreadStart;
