@@ -23,12 +23,12 @@
 
 /*
  * @test
- * @bug 8262891
+ * @bug 8262891 8290709
  * @summary Check the pattern domination error are reported correctly.
- * @compile/fail/ref=Domination.out -XDrawDiagnostics --enable-preview -source ${jdk.version} Domination.java
+ * @enablePreview
+ * @compile/fail/ref=Domination.out -XDrawDiagnostics Domination.java
  */
 public class Domination {
-
     int testDominatesError1(Object o) {
         switch (o) {
             case CharSequence cs: return 0;
@@ -136,4 +136,86 @@ public class Domination {
         }
     }
 
+    int testRecordPatternsDominated1() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case R r: return 1;
+            case R(int a): return -1;
+        }
+    }
+
+    int testRecordPatternsDominated2() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case R(int a): return 1;
+            case R(int a): return -1;
+        }
+    }
+
+    int testRecordPatternsDominated3() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case R r when guard(): return 1;
+            case R(int a): return -1;
+        }
+    }
+
+    int testRecordPatternsDominated4() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case R(int a) when guard(): return 1;
+            case R(int a): return -1;
+        }
+    }
+
+    boolean guard() {
+        return false;
+    }
+
+    int testRecordPatternsDominated5() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case ((R r)): return 1;
+            case ((R(int a))): return -1;
+        }
+    }
+
+    int testRecordPatternsDominated6() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case ((R(int a))): return 1;
+            case ((R(int a))): return -1;
+        }
+    }
+
+    int testRecordPatternsDominated7() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case R r when true: return 1;
+            case R(int a): return -1;
+        }
+    }
+
+    int testRecordPatternsDominated8() {
+        record R(int a) {}
+        Object o = null;
+        switch (o) {
+            case R(int a) when true: return 1;
+            case R(int a): return -1;
+        }
+    }
+
+    int testNotDominates2(Integer x) {
+        switch (x) {
+            case Integer i: return i;
+            case null : return -1;
+        }
+    }
 }
