@@ -25,16 +25,14 @@
 
 package org.openjdk.bench.java.lang.foreign;
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
-import org.openjdk.jmh.annotations.Setup;
-import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.annotations.Measurement;
 import org.openjdk.jmh.annotations.Mode;
@@ -54,8 +52,8 @@ import java.util.concurrent.TimeUnit;
 @Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
 public class PointerInvoke extends CLayouts {
 
-    MemorySession session = MemorySession.openConfined();
-    MemorySegment segment = MemorySegment.allocateNative(100, session);
+    Arena arena = Arena.openConfined();
+    MemorySegment segment = MemorySegment.allocateNative(100, arena.scope());
 
     static {
         System.loadLibrary("Ptr");
@@ -66,35 +64,30 @@ public class PointerInvoke extends CLayouts {
     static {
         Linker abi = Linker.nativeLinker();
         SymbolLookup loaderLibs = SymbolLookup.loaderLookup();
-        F_LONG = abi.downcallHandle(loaderLibs.lookup("func_as_long").get(),
+        F_LONG = abi.downcallHandle(loaderLibs.find("func_as_long").get(),
                 FunctionDescriptor.of(C_INT, C_LONG_LONG));
-        F_PTR = abi.downcallHandle(loaderLibs.lookup("func_as_ptr").get(),
+        F_PTR = abi.downcallHandle(loaderLibs.find("func_as_ptr").get(),
                 FunctionDescriptor.of(C_INT, C_POINTER));
     }
 
     @TearDown
     public void tearDown() {
-        session.close();
+        arena.close();
     }
 
     @Benchmark
     public int panama_call_as_long() throws Throwable {
-        return (int)F_LONG.invokeExact(segment.address().toRawLongValue());
+        return (int)F_LONG.invokeExact(segment.address());
     }
 
     @Benchmark
     public int panama_call_as_address() throws Throwable {
-        return (int)F_PTR.invokeExact((Addressable)segment.address());
-    }
-
-    @Benchmark
-    public int panama_call_as_segment() throws Throwable {
-        return (int)F_PTR.invokeExact((Addressable)segment);
+        return (int)F_PTR.invokeExact(segment);
     }
 
     @Benchmark
     public int panama_call_as_new_segment() throws Throwable {
-        MemorySegment newSegment = MemorySegment.ofAddress(segment.address(), 100, session);
-        return (int)F_PTR.invokeExact((Addressable)newSegment);
+        MemorySegment newSegment = MemorySegment.ofAddress(segment.address(), 100, arena.scope());
+        return (int)F_PTR.invokeExact(newSegment);
     }
 }
