@@ -23,12 +23,11 @@
  */
 package org.openjdk.bench.jdk.incubator.vector;
 
-import java.nio.ByteBuffer;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentScope;
 import java.nio.ByteOrder;
 import java.util.concurrent.TimeUnit;
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import jdk.incubator.vector.ByteVector;
 import jdk.incubator.vector.VectorOperators;
 import jdk.incubator.vector.VectorSpecies;
@@ -44,8 +43,6 @@ import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 
-import static java.lang.foreign.ValueLayout.JAVA_BYTE;
-
 @BenchmarkMode(Mode.AverageTime)
 @Warmup(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
@@ -53,7 +50,7 @@ import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 @Fork(value = 1, jvmArgsAppend = {
     "--add-modules=jdk.incubator.vector",
-    "-Dforeign.restricted=permit",
+    "--enable-preview",
     "--enable-native-access", "ALL-UNNAMED",
     "-Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=1"})
 public class TestLoadStoreBytes {
@@ -67,31 +64,15 @@ public class TestLoadStoreBytes {
   private byte[] dstArray;
 
 
-  private ByteBuffer srcBufferHeap;
+  private MemorySegment srcSegmentHeap;
 
-  private ByteBuffer dstBufferHeap;
+  private MemorySegment dstSegmentHeap;
 
-  private ByteBuffer srcBufferNative;
+  private MemorySegment srcSegment;
 
-  private ByteBuffer dstBufferNative;
+  private MemorySegment dstSegment;
 
-
-  private MemorySession implicitScope;
-
-  private MemorySegment srcSegmentImplicit;
-
-  private MemorySegment dstSegmentImplicit;
-
-  private ByteBuffer srcBufferSegmentImplicit;
-
-  private ByteBuffer dstBufferSegmentImplicit;
-
-
-  private MemoryAddress srcAddress;
-
-  private MemoryAddress dstAddress;
-
-  byte[] a, b, c;
+  private byte[] a, b, c;
 
   @Setup
   public void setup() {
@@ -101,23 +82,11 @@ public class TestLoadStoreBytes {
       srcArray[i] = (byte) i;
     }
 
+    srcSegmentHeap = MemorySegment.ofArray(new byte[size]);
+    dstSegmentHeap = MemorySegment.ofArray(new byte[size]);
 
-    srcBufferHeap = ByteBuffer.allocate(size);
-    dstBufferHeap = ByteBuffer.allocate(size);
-
-    srcBufferNative = ByteBuffer.allocateDirect(size);
-    dstBufferNative = ByteBuffer.allocateDirect(size);
-
-
-    implicitScope = MemorySession.openImplicit();
-    srcSegmentImplicit = MemorySegment.allocateNative(size, SPECIES.vectorByteSize(), implicitScope);
-    srcBufferSegmentImplicit = srcSegmentImplicit.asByteBuffer();
-    dstSegmentImplicit = MemorySegment.allocateNative(size, SPECIES.vectorByteSize(), implicitScope);
-    dstBufferSegmentImplicit = dstSegmentImplicit.asByteBuffer();
-
-
-    srcAddress = MemorySegment.allocateNative(size, implicitScope).address();
-    dstAddress = MemorySegment.allocateNative(size, implicitScope).address();
+    srcSegment = MemorySegment.allocateNative(size, SPECIES.vectorByteSize(), SegmentScope.auto());
+    dstSegment = MemorySegment.allocateNative(size, SPECIES.vectorByteSize(), SegmentScope.auto());
 
     a = new byte[size];
     b = new byte[size];
@@ -127,19 +96,9 @@ public class TestLoadStoreBytes {
 
   @Benchmark
   public void array() {
-//    final var srcArray = this.srcArray;
     for (int i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
       var v = ByteVector.fromArray(SPECIES, srcArray, i);
       v.intoArray(dstArray, i);
-    }
-  }
-
-  @Benchmark
-  public void array2() {
-//    final var srcArray = this.srcArray;
-    for (int i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
-      var v = ByteVector.fromByteArray(SPECIES, srcArray, i, ByteOrder.nativeOrder());
-      v.intoByteArray(dstArray, i, ByteOrder.nativeOrder());
     }
   }
 
@@ -187,65 +146,30 @@ public class TestLoadStoreBytes {
   }
 
   @Benchmark
-  public void bufferHeap() {
-    for (int i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
-      var v = ByteVector.fromByteBuffer(SPECIES, srcBufferHeap, i, ByteOrder.nativeOrder());
-      v.intoByteBuffer(dstBufferHeap, i, ByteOrder.nativeOrder());
+  public void segmentHeap() {
+    for (long i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
+      var v = ByteVector.fromMemorySegment(SPECIES, srcSegmentHeap, i, ByteOrder.nativeOrder());
+      v.intoMemorySegment(dstSegmentHeap, i, ByteOrder.nativeOrder());
     }
   }
 
   @Benchmark
-  public void bufferHeapScalar() {
-    for (int i = 0; i < SPECIES.loopBound(srcArray.length); i++) {
-      var v = srcBufferHeap.get(i);
-      dstBufferHeap.put(i, v);
+  public void segmentNativeImplicit() {
+    for (long i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
+      var v = ByteVector.fromMemorySegment(SPECIES, srcSegment, i, ByteOrder.nativeOrder());
+      v.intoMemorySegment(dstSegment, i, ByteOrder.nativeOrder());
     }
   }
 
   @Benchmark
-  @CompilerControl(CompilerControl.Mode.PRINT)
-  public void bufferNative() {
-    for (int i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
-      var v = ByteVector.fromByteBuffer(SPECIES, srcBufferNative, i, ByteOrder.nativeOrder());
-      v.intoByteBuffer(dstBufferNative, i, ByteOrder.nativeOrder());
-    }
-  }
+  public void segmentNativeConfined() {
+    try (final var arena = Arena.openConfined()) {
+      final var srcSegmentConfined = MemorySegment.ofAddress(srcSegment.address(), size, arena.scope());
+      final var dstSegmentConfined = MemorySegment.ofAddress(dstSegment.address(), size, arena.scope());
 
-  @Benchmark
-  public void bufferNativeScalar() {
-    for (int i = 0; i < SPECIES.loopBound(srcArray.length); i++) {
-      var v = srcBufferNative.get(i);
-      dstBufferNative.put(i, v);
-    }
-  }
-
-
-  @Benchmark
-  public void bufferSegmentImplicit() {
-    for (int i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
-      var v = ByteVector.fromByteBuffer(SPECIES, srcBufferSegmentImplicit, i, ByteOrder.nativeOrder());
-      v.intoByteBuffer(dstBufferSegmentImplicit, i, ByteOrder.nativeOrder());
-    }
-  }
-
-  @Benchmark
-  @CompilerControl(CompilerControl.Mode.PRINT)
-  public void segmentImplicitScalar() {
-    for (int i = 0; i < SPECIES.loopBound(srcArray.length); i++) {
-      var v = srcSegmentImplicit.get(JAVA_BYTE, i);
-      dstSegmentImplicit.set(JAVA_BYTE, i, v);
-    }
-  }
-
-  @Benchmark
-  public void bufferSegmentConfined() {
-    try (final var scope = MemorySession.openConfined()) {
-      final var srcBufferSegmentConfined = MemorySegment.ofAddress(srcAddress, size, scope).asByteBuffer();
-      final var dstBufferSegmentConfined = MemorySegment.ofAddress(dstAddress, size, scope).asByteBuffer();
-
-      for (int i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
-        var v = ByteVector.fromByteBuffer(SPECIES, srcBufferSegmentConfined, i, ByteOrder.nativeOrder());
-        v.intoByteBuffer(dstBufferSegmentConfined, i, ByteOrder.nativeOrder());
+      for (long i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
+        var v = ByteVector.fromMemorySegment(SPECIES, srcSegmentConfined, i, ByteOrder.nativeOrder());
+        v.intoMemorySegment(dstSegmentConfined, i, ByteOrder.nativeOrder());
       }
     }
   }
